<resources>
    <string name="app_name">GroupMeal</string>

    <!--Welcome page content-->

    <string name="welcome">Welcome</string>
    <string name="home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu container-->

    <string name="action_settings">Settings</string>
    <string name="creategroup">Create Group</string>
    <string name="feedback">Feedback</string>
    <string name="aboutus">About Us</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="joingroup">Join Group</string>
    <string name="acitvity">Activity</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="sent">Sent</string>

    <string name="app">App</string>

    <!--Nav Header-->
    <string name="profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="signuptextview">Don\'t have an account? Sign Up</string>
    <string name="errortext">The email and/or password is incorrect</string>

    <string name="facebook_app_id">1807836999256140</string>
    <string name="fb_login_protocol_scheme">fb1807836999256140</string>


    <!--Sign Up Page-->

    <string name="logintoaccount">Have an account? Login!</string>
    <string name="signup">Sign Up</string>
    <string name="errorTextView">Sorry it looks like you have already sign up</string>

    <!--Create Group-->

    <string name="groupname">Group\'s Name:</string>
    <string name="addmember">+Add member</string>

    <!--qw-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>



</resources>
