<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_page"
            android:icon="@drawable/home"
            android:title="@string/home"
            />

        <item
            android:id="@+id/create_group"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/creategroup" />

        <item android:id="@+id/join_group"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/joingroup"/>
        <item
            android:id="@+id/receipt"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="Receipt" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/sent"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sent" />
        </menu>
    </item>

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
