<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.next.groupmeal.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!--WELCOME PAGE CONTENT-->

    <LinearLayout
        android:id="@+id/home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/welcome"
            android:textColor="@color/backgound"/>

    </LinearLayout>

    <!--Menu Create Group-->

    <LinearLayout
        android:id="@+id/creategroupAction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/groupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:hint="@string/groupname"
            android:maxLength="20"/>

        <TextView
            android:id="@+id/nameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/add_member_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/buttonstyle"
            android:text="@string/addmember"/>

        <ListView
            android:id="@+id/list_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">


        </ListView>

        <!-- End Menu Create Group-->


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
