<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/backgound"
    tools:context="com.next.groupmeal.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errotext"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:translationY="-20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edittextstyle"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/green" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edittextstyle"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/lock"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/logintoaccount"
            android:textColor="@color/green"
            android:textStyle="italic"
            android:translationX="10dp"
            android:translationY="30dp" />


        <Button
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/buttonstyle"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/signup"
            android:translationY="-40dp" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="0dp" />

    </LinearLayout>


</LinearLayout>
