<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.next.groupmeal.LoginActivity"
    android:background="@color/backgound">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errotext"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edittextstyle"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/green" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edittextstyle"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/lock"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/green" />


        <Button
            android:id="@+id/loginbuton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="@drawable/buttonstyle"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/title_activity_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/signuptextview"
                android:textColor="@color/green"
                android:textSize="15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/resetPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="Forget Password"
                android:textSize="15dp"
                android:textColor="@color/green"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
